--- a/weatherlet@kerplonk.com/files/weatherlet@kerplonk.com/stylesheet.css
+++ b/weatherlet@kerplonk.com/files/weatherlet@kerplonk.com/stylesheet.css
@@ -1,3 +1,8 @@
+.weatherlet-header {
+    font-size: 110%;
+    font-weight: bolder;
+}
+
 .weatherlet-align-left {
     text-align: left;
     width: 150px;
